--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <title>HappyKing 站点监测</title>
+    <title>YSC 站点监测</title>
     <!--ie浏览器拒绝访问-->
     <script src="./ie.js"></script>
     <!--配置文件-->
